fixin footer on mobile view

--- a/index.css
+++ b/index.css
@@ -116,13 +116,14 @@ a{
   text-shadow: 2px 2px white;
   padding-top:1rem;
 }
-footer {
+.footer {
   width:100vw;
   background-color:black;
+  height: auto;
 }
 
 .contact {
-  height:40vh;
+  height:auto;
   width:100vw;
   text-align: center;
   padding-top:2.5rem;
@@ -131,7 +132,7 @@ footer {
 .contact_text,.contact_text2 {
   color:rgb(255,255,255,1);
   font-family: 'Raleway', sans-serif;
-  padding-bottom:0.5rem;
+  padding-bottom:2rem;
   opacity: 0.8;
 }
 
@@ -215,10 +216,10 @@ footer {
     height:140vh;
     width:100vw;
   }
-  footer {
-    position:fixed;
-    bottom:0vh;
-    height:10vh;
+  .footer {
+    position:absolute;
+    bottom:-150vh;
+    height:auto;
   }
   .contact_text {
     padding-top:0;
@@ -227,8 +228,7 @@ footer {
   }
   .contact_text2 {
   }
-  footer:hover {
-    height:50vh;
+  .footer:hover {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
   }
